# behaverse-api

./: .Rbuildignore  .dvcignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  environment.yml  pyproject.toml
.dvc/: config
.github/workflows/: docs-publish.yml  pypi-publish.yml
R/: download_dataset.R  load_dataset.R
datasets/: README.md  datasets.yml
datasets/P500/: .gitignore  L1m.tar.gz.dvc  L1m.tar.gz_  README.md
datasets/P500-9subjects/: README.md
datasets/P500_9subjects/: L1m.tar.gz.dvc  README.md
docs/: .gitignore  _quarto.yml  _quartodocs.yml  getting_started.qmd  system_design.qmd
docs/figures/: deployment.drawio
examples/: 1 Getting Started with Behaverse Data.ipynb  1 Getting Started.ipynb
inst/: WORDLIST
man/: download_dataset.Rd  load_dataset.Rd
src/behaverse/: __init__.py  dataset.py  dataset_info.py  dataset_test.py  dvc_storage_test.py  dvc_utils.py  functional.py  functions_test.py  http_storage.py  utils.py
src/behaverse/data/: dataset_test.py
src/behaverse/remotes/: dvc.py  http.py
src/behaverse/storage/: dvc.py  dvc_storage.py  dvc_storage_test.py  http.py
tests/: test_dataset.py
vignettes/: download_p500.Rmd
