[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "behaverse"
authors = [
    {name = "Morteza Ansarinia", email = "ansarinia@me.com"},
    {name = "Hoorieh Afkari", email = "hoorieh.afkari@uni.lu"},
    {name = "Pedro Cardoso-Leite", email = "pedro.cardosoleite@uni.lu"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

[project.urls]
Home = "https://behaverse.org"
Documentation = "https://github.com/behaverse/data-model"
Source = "https://github.com/behaverse/behaverse"
Tracker = "https://github.com/behaverse/behaverse/issues"

[tools.flit.module]
name = "behaverse"

[tool.flake8]
max-line-length = 120
select = "F,E,W,B,B901,B902,B903"
ignore = [
    "W503"
]

executionEnvironments = [
  { root = "src" }
]

